# uol_group_d

./: .gitignore  README.md  pyproject.toml
datasets/: LAEI_2019_NA_FILLED_WITH_MEAN.csv
ipynb_files/: Data Visualization.ipynb  Generate Dataset.ipynb  RandomForest.ipynb  RandomForestMean.ipynb  RandomForestPrediction.py  linear_regression.ipynb  linear_regression2.ipynb  svm.ipynb
ipynb_files/code/: Dataset Visualization.ipynb  Generate Dataset.ipynb  Linear Regression.ipynb  Random Forests.ipynb  SVM.ipynb
